--- a/museum-frontend/src/app/feature-modules/exhibitions/exhibition-proposal/exhibition-proposal.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/exhibition-proposal/exhibition-proposal.component.html
@@ -2,10 +2,12 @@
 
 <div class="form-container">
   <button class="close-btn" (click)="close()">×</button>
-  <h1>Propose an Exhibition</h1>
-  <h3 *ngIf="currentStep === 1" class="sub-header sub-header-dates">Select Dates</h3>
-  <h3 *ngIf="currentStep === 2" class="sub-header sub-header-room">Select a Room</h3>
-  <h3 *ngIf="currentStep === 3" class="sub-header sub-header-pricing">Set the Pricing</h3>
+  <div class="header-container">
+    <h1>Propose an Exhibition</h1>
+    <h3 *ngIf="currentStep === 1" class="sub-header sub-header-dates">Select Dates</h3>
+    <h3 *ngIf="currentStep === 2" class="sub-header sub-header-room">Select a Room</h3>
+    <h3 *ngIf="currentStep === 3" class="sub-header sub-header-pricing">Set the Pricing</h3>
+  </div>
   <form [formGroup]="proposalForm" (ngSubmit)="onSubmit()"> <!-- Ensure the formGroup is correctly bound here -->
 
     <!-- Step 1: Select Date Range -->
@@ -42,11 +44,11 @@
     <!-- Step 3: Set Prices -->
     <div *ngIf="currentStep === 3" class="step-container">
         <div class="form-group">
-            <input type="number" id="adultPrice" formControlName="adultPrice" class="form-control" placeholder=" ">
+            <input type="number" id="adultPrice" formControlName="adultPrice" class="form-control" placeholder="0" min="0">
             <label for="adultPrice">Adult Price</label>
         </div>
         <div class="form-group">
-            <input type="number" id="minorPrice" formControlName="minorPrice" class="form-control" placeholder=" ">
+            <input type="number" id="minorPrice" formControlName="minorPrice" class="form-control" placeholder="0" min="0">
             <label for="minorPrice">Minor Price</label>
         </div>
         <div class="button-group">
