create exhibition pt2, dodati itemi

--- a/museum-frontend/src/app/feature-modules/exhibitions/create-exhibition/create-exhibition.component.css
+++ b/museum-frontend/src/app/feature-modules/exhibitions/create-exhibition/create-exhibition.component.css
@@ -72,5 +72,131 @@
   .proposal-button:hover {
     background-color: #f0f0f0;
   }
+
+  .exhibition-create-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  h1 {
+    font-size: 2em;
+    margin: 0;
+  }
+  
+  .proposal-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .proposal-button:hover {
+    background-color: #0056b3;
+  }
+  
+  .form-section {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .left-section, .right-section {
+    width: 48%;
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
+  .form-group label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .form-control {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  
+  .items-section {
+    margin-top: 20px;
+  }
+  
+  .items-section label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .items-section .form-control {
+    margin-bottom: 20px;
+  }
+  
+  .items-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  
+  .item-card {
+    width: 300px; /* Adjust width as needed */
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 20px;
+  }
+  
+  .image-container {
+    width: 100%;
+    height: 200px; /* Adjust height as needed */
+    overflow: hidden;
+  }
+  
+  .image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .info-container {
+    padding: 20px;
+  }
+  
+  .item-name {
+    font-size: 1.2em;
+    margin-bottom: 5px;
+  }
+  
+  .description,
+  .period,
+  .category,
+  .additional-info,
+  .authorsName,
+  .yearOfCreation {
+    margin-bottom: 10px;
+  }
+  
+  .btn {
+    border: 0;
+    background: #FFFFFF;
+    margin-left: 15%;
+  }
+  
+  .btn:hover {
+    color: #807f7f;
+  }
+  
   
   
