--- a/museum-frontend/src/app/feature-modules/exhibitions/create-exhibition/create-exhibition.component.html
+++ b/museum-frontend/src/app/feature-modules/exhibitions/create-exhibition/create-exhibition.component.html
@@ -39,13 +39,41 @@
 
     <div class="items-section">
         <label>Choose items to display</label>
-        <input type="text" [(ngModel)]="itemSearch" class="form-control" placeholder="Search by name...">
+        <input type="text" [(ngModel)]="itemSearch" (ngModelChange)="filterItems()" class="form-control" placeholder="Search by name...">
         <div class="items-grid">
           <div *ngFor="let item of filteredItems" class="item-card" (click)="selectItem(item)">
-            Item
+            <div class="image-container">
+              <img class="item-image" *ngIf="item" [src]="item.picture" alt="Item Image">
+            </div>
+            <div class="info-container">
+              <div class="info-row">
+                <label>Name:</label>
+                <p class="item-name">{{item.name}}</p>
+              </div>
+              <div class="info-row">
+                <label>Description:</label>
+                <p class="description">{{item.description}}</p>
+              </div>
+              <div class="info-row">
+                <label>Period:</label>
+                <p class="period">{{item.period}}</p>
+              </div>
+              <div class="info-row" *ngIf="item.authorsName">
+                <label>Authors name:</label>
+                <p class="authorsName">{{item.authorsName}}</p>
+              </div>
+              <div class="info-row" *ngIf="item.yearOfCreation">
+                <label>Year of creation:</label>
+                <p class="yearOfCreation">{{item.yearOfCreation}}</p>
+              </div>
+              <div class="info-row">
+                <label>Category:</label>
+                <p class="category">{{item.category}}</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+    </div>
 
     <button type="submit" [disabled]="!exhibitionForm.valid" class="submit-button">Create Exhibition</button>
 </form>
